--- a/RecordEnumerableEquality.Tests/RecordEnumerableEquality.Tests.csproj
+++ b/RecordEnumerableEquality.Tests/RecordEnumerableEquality.Tests.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
 	<PackageReference Include="FodyHelpers" Version="6.8.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
